--- a/views/layout.jade
+++ b/views/layout.jade
@@ -61,20 +61,20 @@ html
       - var hour = a.getHours();
       - var min = a.getMinutes();
       - var sec = a.getSeconds();
-      - var suffix = 'th'
-      if date == 1 || date == 21 || date == 31
-        - suffix = 'st'
-      if date == 2 || date == 22 || date == 32
-        - suffix = 'nd'
-      if date == 3 || date == 23
-        - suffix = 'rd'
+      // - var suffix = 'th'
+      // if date == 1 || date == 21 || date == 31
+      //   - suffix = 'st'
+      // if date == 2 || date == 22 || date == 32
+      //   - suffix = 'nd'
+      // if date == 3 || date == 23
+      //   - suffix = 'rd'
       if hour < 10
         - hour = '0' + hour
       if min < 10
         - min = '0' + min
       if sec < 10
         - sec = '0' + sec
-      - var time = date + suffix + ' ' + month + ' ' + year + ' ' + hour + ':' + min + ':' + sec ;   
+      - var time =  year + '-' + month + '-' + date + ' ' + hour + ':' + min + ':' + sec ;   
       - return time
     -  };
     .nav.navbar.navbar-default.navbar-fixed-top(role='navigation')
