add link to 19800

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -111,7 +111,7 @@ html
                     span.menu-text #{settings.locale.menu_reward}
            
             li.active
-                a.navbar-link.loading(href='www.19800.com') 
+                a.navbar-link.loading(href='//www.19800.com') 
                   span.fa.fa-line-chart
                   span.menu-text #{settings.locale.menu_markets}
             
@@ -182,7 +182,7 @@ html
           ul.nav.navbar-nav
             li.pull-left
               a#twitter-icon(href="https://twitter.com/#{settings.twitter}", target='_blank')  
-                span.glyphicon.fa.fa-twitter
+                span.glyphicon.fa.fa-twitter 
       span.connections
         label#lblBlockcount.label.label-default -
         label#lblConnections.label.label-default -
